API Sync and Auth improvements
