# src/main/java/com/definancy/model/QrCodeTransactionRequest.java
@@ -1,0 +1,268 @@
+/*
+ * Definancy API
+ * Specification version: 0.0.1.wip.20250925
+ *
+ * NOTE: This class is auto generated by our custom generator.
+ * Do not edit the class manually.
+ */
+
+
+package com.definancy.model;
+
+import java.util.Objects;
+import java.util.Locale;
+import com.definancy.model.AmountFormat;
+import com.definancy.model.ContractId;
+import com.google.gson.TypeAdapter;
+import com.google.gson.annotations.JsonAdapter;
+import com.google.gson.annotations.SerializedName;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import java.io.IOException;
+import java.util.Arrays;
+
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonDeserializationContext;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParseException;
+import com.google.gson.TypeAdapterFactory;
+import com.google.gson.reflect.TypeToken;
+import com.google.gson.TypeAdapter;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import java.io.IOException;
+
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.Locale;
+
+import com.definancy.JSON;
+
+/**
+ * Request object containing the essential payment parameters needed to generate a blockchain transaction QR code. Specifies the destination, amount, and token contract details that will be encoded into a scannable QR format for cryptocurrency wallet applications.
+ */
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", comments = "Generator version: 7.16.0-SNAPSHOT")
+public class QrCodeTransactionRequest {
+  public static final String SERIALIZED_NAME_CONTRACT_ID = "contract-id";
+  @SerializedName(SERIALIZED_NAME_CONTRACT_ID)
+  @javax.annotation.Nonnull
+  private ContractId contractId;
+
+  public static final String SERIALIZED_NAME_AMOUNT = "amount";
+  @SerializedName(SERIALIZED_NAME_AMOUNT)
+  @javax.annotation.Nonnull
+  private AmountFormat amount;
+
+  public static final String SERIALIZED_NAME_ADDRESS = "address";
+  @SerializedName(SERIALIZED_NAME_ADDRESS)
+  @javax.annotation.Nonnull
+  private String address;
+
+  public QrCodeTransactionRequest() {
+  }
+
+  public QrCodeTransactionRequest contractId(@javax.annotation.Nonnull ContractId contractId) {
+    this.contractId = contractId;
+    return this;
+  }
+
+  /**
+   * Get contractId
+   * @return contractId
+   */
+  @javax.annotation.Nonnull
+  public ContractId getContractId() {
+    return contractId;
+  }
+
+  public void setContractId(@javax.annotation.Nonnull ContractId contractId) {
+    this.contractId = contractId;
+  }
+
+
+  public QrCodeTransactionRequest amount(@javax.annotation.Nonnull AmountFormat amount) {
+    this.amount = amount;
+    return this;
+  }
+
+  /**
+   * Get amount
+   * @return amount
+   */
+  @javax.annotation.Nonnull
+  public AmountFormat getAmount() {
+    return amount;
+  }
+
+  public void setAmount(@javax.annotation.Nonnull AmountFormat amount) {
+    this.amount = amount;
+  }
+
+
+  public QrCodeTransactionRequest address(@javax.annotation.Nonnull String address) {
+    this.address = address;
+    return this;
+  }
+
+  /**
+   * Blockchain-specific address format used for cryptocurrency transactions. The exact format varies by network (e.g., Ethereum uses hexadecimal addresses starting with 0x, Bitcoin uses base58 encoding). Used for contract addresses, wallet addresses, and payment destinations.
+   * @return address
+   */
+  @javax.annotation.Nonnull
+  public String getAddress() {
+    return address;
+  }
+
+  public void setAddress(@javax.annotation.Nonnull String address) {
+    this.address = address;
+  }
+
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    QrCodeTransactionRequest qrCodeTransactionRequest = (QrCodeTransactionRequest) o;
+    return Objects.equals(this.contractId, qrCodeTransactionRequest.contractId) &&
+        Objects.equals(this.amount, qrCodeTransactionRequest.amount) &&
+        Objects.equals(this.address, qrCodeTransactionRequest.address);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(contractId, amount, address);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class QrCodeTransactionRequest {\n");
+    sb.append("    contractId: ").append(toIndentedString(contractId)).append("\n");
+    sb.append("    amount: ").append(toIndentedString(amount)).append("\n");
+    sb.append("    address: ").append(toIndentedString(address)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+
+  public static HashSet<String> openapiFields;
+  public static HashSet<String> openapiRequiredFields;
+
+  static {
+    // a set of all properties/fields (JSON key names)
+    openapiFields = new HashSet<String>(Arrays.asList("contract-id", "amount", "address"));
+
+    // a set of required properties/fields (JSON key names)
+    openapiRequiredFields = new HashSet<String>(Arrays.asList("contract-id", "amount", "address"));
+  }
+
+  /**
+   * Validates the JSON Element and throws an exception if issues found
+   *
+   * @param jsonElement JSON Element
+   * @throws IOException if the JSON Element is invalid with respect to QrCodeTransactionRequest
+   */
+  public static void validateJsonElement(JsonElement jsonElement) throws IOException {
+      if (jsonElement == null) {
+        if (!QrCodeTransactionRequest.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
+          throw new IllegalArgumentException(String.format(Locale.ROOT, "The required field(s) %s in QrCodeTransactionRequest is not found in the empty JSON string", QrCodeTransactionRequest.openapiRequiredFields.toString()));
+        }
+      }
+
+      Set<Map.Entry<String, JsonElement>> entries = jsonElement.getAsJsonObject().entrySet();
+      // check to see if the JSON string contains additional fields
+      for (Map.Entry<String, JsonElement> entry : entries) {
+        if (!QrCodeTransactionRequest.openapiFields.contains(entry.getKey())) {
+          throw new IllegalArgumentException(String.format(Locale.ROOT, "The field `%s` in the JSON string is not defined in the `QrCodeTransactionRequest` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
+        }
+      }
+
+      // check to make sure all required properties/fields are present in the JSON string
+      for (String requiredField : QrCodeTransactionRequest.openapiRequiredFields) {
+        if (jsonElement.getAsJsonObject().get(requiredField) == null) {
+          throw new IllegalArgumentException(String.format(Locale.ROOT, "The required field `%s` is not found in the JSON string: %s", requiredField, jsonElement.toString()));
+        }
+      }
+        JsonObject jsonObj = jsonElement.getAsJsonObject();
+      // validate the required field `contract-id`
+      ContractId.validateJsonElement(jsonObj.get("contract-id"));
+      // validate the required field `amount`
+      AmountFormat.validateJsonElement(jsonObj.get("amount"));
+      if (!jsonObj.get("address").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format(Locale.ROOT, "Expected the field `address` to be a primitive type in the JSON string but got `%s`", jsonObj.get("address").toString()));
+      }
+  }
+
+  public static class CustomTypeAdapterFactory implements TypeAdapterFactory {
+    @SuppressWarnings("unchecked")
+    @Override
+    public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
+       if (!QrCodeTransactionRequest.class.isAssignableFrom(type.getRawType())) {
+         return null; // this class only serializes 'QrCodeTransactionRequest' and its subtypes
+       }
+       final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
+       final TypeAdapter<QrCodeTransactionRequest> thisAdapter
+                        = gson.getDelegateAdapter(this, TypeToken.get(QrCodeTransactionRequest.class));
+
+       return (TypeAdapter<T>) new TypeAdapter<QrCodeTransactionRequest>() {
+           @Override
+           public void write(JsonWriter out, QrCodeTransactionRequest value) throws IOException {
+             JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
+             elementAdapter.write(out, obj);
+           }
+
+           @Override
+           public QrCodeTransactionRequest read(JsonReader in) throws IOException {
+             JsonElement jsonElement = elementAdapter.read(in);
+             validateJsonElement(jsonElement);
+             return thisAdapter.fromJsonTree(jsonElement);
+           }
+
+       }.nullSafe();
+    }
+  }
+
+  /**
+   * Create an instance of QrCodeTransactionRequest given an JSON string
+   *
+   * @param jsonString JSON string
+   * @return An instance of QrCodeTransactionRequest
+   * @throws IOException if the JSON string is invalid with respect to QrCodeTransactionRequest
+   */
+  public static QrCodeTransactionRequest fromJson(String jsonString) throws IOException {
+    return JSON.getGson().fromJson(jsonString, QrCodeTransactionRequest.class);
+  }
+
+  /**
+   * Convert an instance of QrCodeTransactionRequest to an JSON string
+   *
+   * @return JSON string
+   */
+  public String toJson() {
+    return JSON.getGson().toJson(this);
+  }
+}
+
